Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.62***

**** Fix dotted references inside generated cells.  [David Hewson]

* Verilator 3.623 12/05/2006

***  Add --output-split-cfuncs for accelerating GCC compile. [Eugene Weber]

**** Fix $signed mis-extending when input has a WIDTH violation. [Eugene Weber]

**** Add M32 make variable to support -m32 compiles.  [Eugene Weber]

* Verilator 3.622 10/17/2006 Stable

**** Fix --skip-identical without --debug, broken in 3.621.  [Andy Meier]

* Verilator 3.621 10/11/2006 Beta

**   Add /*verilator no_inline_task*/ to prevent over-expansion. [Eugene Weber]

***  Public functions now allow > 64 bit arguments.

**** Remove .vpp intermediate files when not under --debug.

**** Fix link error when using --exe with --trace.  [Eugene Weber]

**** Fix mis-optimization of wide concats with constants.

**** Fix core dump on printing error when not under --debug.  [Allan Cochrane]

* Verilator 3.620 10/04/2006 Stable

***  Support simple inout task ports.  [Eugene Weber]

***  Allow overriding Perl, Flex and Bison versions.  [by Robert Farrell]

***  Optimize variables set to constants within basic blocks for ~3%.

**** Default make no longer makes the docs; if you edit the documentation.
     sources, run "make info" to get them.

**** Optimize additional boolean identities (a|a = a, etc.)

**** Fix coredump when dotted cross-ref inside task call. [Eugene Weber]

**** Fix dotted variables in always sensitivity lists. [Allan Cochrane]

* Verilator 3.610 09/20/2006 Stable

***  Verilator now works under DJGPP (Pentium GCC).  [John Stroebel]

**** Add default define for VL_PRINTF.  [John Stroebel]

**** Removed coverage request variable; see Coverage limitations in docs.

**** Fix DOS carrage returns in multiline defines.  [Ralf Karge]

**** Fix printf format warnings on 64-bit linux.
